# f18

./: .clang-format  .drone.star  .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OWNERS.TXT  README.md
lib/: CMakeLists.txt
lib/Common/: CMakeLists.txt
lib/Evaluate/: CMakeLists.txt  call.cpp  characteristics.cpp  fold-implementation.h  fold-integer.cpp  fold-logical.cpp  fold-real.cpp  host.cpp  intrinsics-library-templates.h  shape.cpp  tools.cpp  type.cpp  variable.cpp
lib/FIR/: statements.h
lib/IntermediateRepresentation/: afforestation.cc  common.h  statements.cc
lib/Parser/: parse-tree.cpp  prescan.cpp
lib/Semantics/: CMakeLists.txt  assignment.cpp  attr.cpp  check-allocate.cpp  check-data.cpp  check-data.h  check-declarations.cpp  check-do-forall.cpp  check-io.cpp  check-omp-structure.cpp  check-select-rank.cpp  check-select-rank.h  check-select-stmt.cpp  check-select-stmt.h  expression.cpp  mod-file.cpp  pointer-assignment.cpp  resolve-names.cpp  semantics.cpp  symbol.cpp  tools.cpp
lib/basic/: CMakeLists.txt  target-info.cc  target-info.h
lib/burnside/: CMakeLists.txt  ast-builder.cc  ast-builder.h  bridge.cc  bridge.h  builder.cc  builder.h  canonicalize.cc  canonicalize.h  cfg-builder.h  common.h  complex-handler.h  complex.h  convert-expr.cc  convert-expr.h  convert-type.cc  convert-type.h  expression.cc  expression.h  fe-helper.cc  fe-helper.h  flattened.cc  flattened.h  intrinsics.cc  intrinsics.h  io.cc  io.h  mangler.cc  mangler.h  mixin.h  runtime.cc  runtime.def  runtime.h
lib/common/: CMakeLists.txt  Fortran.h  abstract-descriptor.h  format.cc  format.h  idioms.h
lib/decimal/: CMakeLists.txt  binary-to-decimal.cc  binary-to-decimal.cpp  decimal-to-binary.cc
lib/evaluate/: CMakeLists.txt  characteristics.cc  characteristics.h  check-expression.cc  common.h  complex.cc  complex.cpp  constant.cc  constant.h  expression.cc  expression.h  fold-integer.cc  fold-integer.cpp  fold-intrinsics.cc  fold-intrinsics.h  fold-logical.cpp  fold.cc  fold.h  intrinsics-library.cpp  intrinsics.cc  intrinsics.cpp  real.cc  real.cpp  real.h  tools.cc  tools.h  type.cc  type.h  variable.cpp
lib/fir/: Attribute.cpp  CMakeLists.txt  Dialect.cpp  FIRDialect.cpp  FIROps.cpp  FIRType.cpp  InternalNames.cpp  IteratedDominanceFrontier.cpp  KindMapping.cpp  LLVMConverter.cpp  MemToReg.cpp  StdConverter.cpp  Tilikum.cpp  Type.cpp
lib/frontend/: CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  DiagnosticRenderer.cpp  FrontendOptions.cpp  LogDiagnosticPrinter.cpp  TextDiagnostic.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticPrinter.cpp
lib/frontendtool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
lib/lower/: ASTBuilder.cpp  Bridge.cpp  CFGBuilder.h  CMakeLists.txt  ConvertExpr.cpp  ConvertType.cpp  IO.cpp  Intrinsics.cpp  Mangler.cpp  OpBuilder.cpp  PFTBuilder.cpp  Runtime.cpp  ast-builder.cc  ast-builder.h  bridge.cc  bridge.h  builder.cc  builder.h  cfg-builder.h  complex-handler.h  convert-expr.cc  convert-expr.h  convert-type.cc  convert-type.h  intrinsics.cc  intrinsics.h  io.cc  mangler.cc  mangler.h  runtime.cc  runtime.def  runtime.h
lib/optimizer/: Attribute.cpp  CMakeLists.txt  CodeGen.cpp  FIRDialect.cpp  FIROps.cpp  FIRType.cpp  InternalNames.cpp  IteratedDominanceFrontier.cpp  KindMapping.cpp  StdConverter.cpp
lib/parser/: CMakeLists.txt  Fortran-parsers.cpp  canonicalize-omp.cc  canonicalize-omp.h  char-block.h  debug-parser.cpp  dump-parse-tree.h  executable-parsers.cpp  expr-parsers.cpp  format-specification.h  grammar.h  idioms.h  io-parsers.cpp  message.cc  message.h  openmp-grammar.h  parse-tree-visitor.h  parse-tree.cc  parse-tree.h  parsing.cpp  preprocessor.cpp  prescan.cpp  program-parsers.cpp  provenance.cc  source.cc  stmt-parser.h  token-parsers.h  type-parsers.h  unparse.cc  unparse.cpp  user-state.cpp
lib/runtime/: CMakeLists.txt  descriptor.h  type.cc  type.h
lib/semantics/: CMakeLists.txt  GetValue.h  ParseTreeDump.cc  ParseTreeDump.h  SemanticData.h  canonicalize-do.cpp  canonicalize-omp.cc  canonicalize-omp.h  check-allocate.cc  check-call.cc  check-declarations.cc  check-declarations.cpp  check-do.cc  check-io.cc  check-io.cpp  check-io.h  check-omp-clause.cc  check-omp-clause.h  check-omp-structure.cc  check-omp-structure.h  check-select-stmt.cc  check-select-stmt.cpp  check-select-stmt.h  context.h  dump-parse-tree.h  expr-analysis.cc  expr-types.h  expression.cc  expression.cpp  expression.h  io.cc  io.h  make-types.cc  mod-file.cc  mod-file.cpp  pass1.cc  resolve-labels.cc  resolve-labels.cpp  resolve-names-utils.cpp  resolve-names.cc  (+13 more)
runtime/: CMakeLists.txt  ISO_Fortran_binding.cpp  allocatable.cpp  allocatable.h  buffer.h  derived-type.cpp  derived-type.h  descriptor.cc  descriptor.cpp  descriptor.h  errmsg.cpp  errmsg.h  file.cpp  format.h  internal-unit.cpp  io-error.cpp  io-stmt.h  lock.h  magic-numbers.h  pointer.h  transformational.cpp  type-code.cpp  type-code.h
test/: CMakeLists.txt
test/Evaluate/: CMakeLists.txt
test/Semantics/: CMakeLists.txt  allocate11.f90  data03.f90  misc-declarations.f90  omp-clause-validity01.f90  omp-combined-constructs.f90  resolve33.f90  resolve88.f90  select-case-C1144.f90  select-case.f90  select-rank.f90  select-rank02.f90
test/burnside/: expr-test-generator.cc  test_expression_lowering.sh
test/decimal/: CMakeLists.txt
test/evaluate/: CMakeLists.txt  ISO-Fortran-binding.cc  ISO-Fortran-binding.cpp  folding.cc  folding06.f90  reshape.cc  test_folding.sh
test/fir/: addrof.1.fir  aggregate.fir  alloc.fir  complex.fir  embox.fir  fir-ops.fir  fir-types.fir  float.fir  loads.fir  loop.fir  recursive-type.fir  select-type.fir  select.fir
test/lower/: character-assignment.f90  expr-test-generator.cc  test-character-assignment.cc  test_character_assignment.sh  test_expression_lowering.sh
test/runtime/: CMakeLists.txt
test/semantics/: CMakeLists.txt  allocate03.f90  allocate06.f90  assign03.f90  coarrays01.f90  doconcurrent01.f90  dosemantics12.f90  io03.f90  io04.f90  io07.f90  io08.f90  io09.f90  io10.f90  log  modfile06.f90  modfile07.f90  out  (+22 more)
(+455 files in other folders)
